--- a/pro/css/style.css
+++ b/pro/css/style.css
@@ -62,7 +62,9 @@ body {background:#F6F8FA;}
 .alignright {float:right;margin-left:15px;margin-bottom: 15px}
 .aligncenter {display:block;margin:0 auto 15px}
 a:focus {outline:0px solid}
-img {max-width:100%;height:auto}
+img {max-width:100%;
+    /*height:auto*/
+}
 .fix {overflow:hidden}
 p {margin:0 0 15px;}
 h1, h2, h3, h4, h5, h6 {
